--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.9.1",
