--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-google-autocomplete": "^2.7.3",
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.18.0",
+    "swiper": "^11.0.5",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7"
   },
