--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
     "react-google-autocomplete": "^2.7.3",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.18.0",
     "swiper": "^11.0.5",
