--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@geoapify/geocoder-autocomplete": "^2.0.1",
     "@geoapify/react-geocoder-autocomplete": "^2.0.0",
     "@heroicons/react": "^2.0.18",
+    "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
@@ -35,12 +36,14 @@
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-google-autocomplete": "^2.7.3",
+    "react-hook-form": "^7.49.3",
     "react-infinite-scroll-component": "^6.1.0",
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.18.0",
     "swiper": "^11.0.5",
     "tailwind-merge": "^2.0.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.3",
