--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "swiper": "^11.0.5",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
+    "yup": "^1.3.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
