--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@types/geojson": "^7946.0.13",
     "axios": "^1.6.2",
+    "chart.js": "^4.4.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
@@ -33,8 +34,10 @@
     "lucide-react": "^0.292.0",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
+    "react-donut-chart": "^1.3.3",
     "react-google-autocomplete": "^2.7.3",
     "react-hook-form": "^7.49.3",
     "react-infinite-scroll-component": "^6.1.0",
