--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.292.0",
     "query-string": "^8.1.0",
