--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-donut-chart": "^1.3.3",
+    "react-globe.gl": "^2.27.2",
     "react-google-autocomplete": "^2.7.3",
     "react-hook-form": "^7.49.3",
     "react-infinite-scroll-component": "^6.1.0",
@@ -47,6 +48,7 @@
     "swiper": "^11.0.5",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.166.1",
     "yup": "^1.3.3",
     "zod": "^3.22.4"
   },
