--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "react-google-autocomplete": "^2.7.3",
     "react-hook-form": "^7.49.3",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-modal": "^3.16.1",
     "react-places-autocomplete": "^7.3.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.18.0",
     "swiper": "^11.0.5",
     "tailwind-merge": "^2.0.0",
